--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
         </div>
     </div>
 
-    <div class="boas-praticas">
+    <!--<div class="boas-praticas">
         <a href="https://drive.google.com/file/d/1SEHZvFw3fsg7jPuPa2e64fjTDSwXE0pN/view">Boas práticas</a>
         <i class="fas fa-hand-pointer"></i>
-    </div>
+    </div>-->
 
     <!-- Tela de introdução com logo -->
     <!--<div id="splash">
