--- a/index.html
+++ b/index.html
@@ -31,7 +31,17 @@
     <div class="content">
         <div class="link-container">
             <i id="icon-wp" class="fab fa-whatsapp fa" style="color: #fff;"></i>
-            <a href="https://wa.me/557192853217" target="_blank" style="margin-right: 10px;">Whatsapp</a>
+            <a href="https://wa.me/5571981955895" target="_blank" style="margin-right: 10px;">Loja Morro Ipiranga</a>
+        </div>
+
+        <div class="link-container">
+            <i id="icon-wp" class="fab fa-whatsapp fa" style="color: #fff;"></i>
+            <a href="https://wa.me/5571981933275" target="_blank" style="margin-right: 10px;">Loja Barra</a>
+        </div>
+
+        <div class="link-container">
+            <i id="icon-wp" class="fab fa-whatsapp fa" style="color: #fff;"></i>
+            <a href="https://wa.me/5571981785003" target="_blank" style="margin-right: 10px;">Loja Horto</a>
         </div>
 
         <div class="link-container">
@@ -39,15 +49,15 @@
             <a href="https://www.instagram.com/pjmcasadecarnesoficial/" target="_blank">Nosso insta</a>
         </div>
 
-        <div class="link-container">
+        <!--<div class="link-container">
             <i class="fa-solid fa-location-dot" style="color: #fff;"></i>
             <a href="https://maps.app.goo.gl/Hy9xrViN8e4m3CBF7" target="_blank">Localização</a>
-        </div>
+        </div>-->
 
         <div class="link-container">
             <i id="icon-pd" class="fas fa-receipt" style="color: #fff;"></i>
-            <a href="https://jm-casa-de-carnes.onbeef.app.br/?fbclid=PAZXh0bgNhZW0CMTEAAadQ6WhI42b7vixsm8IzbdQJTGmtw89oWuEYeXMm7gHkCAIMo4BBtXxYNaCK0g_aem_K4UJn0V-bEYEnOsFd0npwA"
-                target="_blank">Peça aqui</a>
+            <a href="https://o-baiano.goomer.app/menu?fbclid=PAZXh0bgNhZW0CMTEAc3J0YwZhcHBfaWQMMjU2MjgxMDQwNTU4AAGn7146AQEjqHXg1GJs70uCf3dGPCL5R1X7mz1ls6qGVdUPZRGdQ1d4WCjzWZQ_aem_1rsPyYdQaZj54DG-XFFVXQ"
+                target="_blank">Tabela de preços</a>
         </div>
     </div>
 
